// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form controlled 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="test"
              placeholder="test input"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled 3`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled FormField deprecated 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
}

.c7 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c7:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c6 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c6::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c6::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c6::-moz-placeholder {
  color: #e0e4ee;
}

.c6:-ms-input-placeholder {
  color: #e0e4ee;
}

.c6::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c3 {
    border: solid 1px #cdd3e3;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <label
        class="c2"
        for="test"
      >
        test
      </label>
      <div
        class="c3 "
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <input
              autocomplete="off"
              class="c6"
              id="test"
              name="test"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c7"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled FormField deprecated 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <label
        class="StyledText-sc-3e83s1-0 dOjTrj"
        for="test"
      >
        test
      </label>
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              id="test"
              name="test"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled FormField deprecated 3`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <label
        class="StyledText-sc-3e83s1-0 dOjTrj"
        for="test"
      >
        test
      </label>
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              id="test"
              name="test"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled input 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="test"
              placeholder="test input"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled input 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled input 3`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled input lazy 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="test"
              placeholder="test input"
              value="test"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled input lazy 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled input lazy 3`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled lazy 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="test"
              placeholder="test input"
              value="test"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled lazy 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled lazy 3`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value="v"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form empty 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  />
</div>
`;

exports[`Form errors 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #e35e59;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #e35e59;
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1 "
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2 "
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <input
              aria-invalid={true}
              autoComplete="off"
              className="c5"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
            />
          </div>
        </div>
      </div>
      <span
        className="c6"
      >
        missing
      </span>
    </div>
  </form>
</div>
`;

exports[`Form infos 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #666666;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1 "
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2 "
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <input
              autoComplete="off"
              className="c5"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
            />
          </div>
        </div>
      </div>
      <span
        className="c6"
      >
        missing
      </span>
    </div>
  </form>
</div>
`;

exports[`Form lazy value 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
}

.c2::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c2::-moz-placeholder {
  color: #e0e4ee;
}

.c2:-ms-input-placeholder {
  color: #e0e4ee;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c1 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c2"
        name="test"
        value=""
      />
    </div>
    <button
      class="c3"
      type="button"
    >
      set
    </button>
    <button
      class="c3"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;

exports[`Form regexp validation 1`] = `
.c0 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<span
  class="c0"
>
  invalid
</span>
`;

exports[`Form required validation 1`] = `
.c0 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<span
  class="c0"
>
  required
</span>
`;

exports[`Form uncontrolled 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="test"
              placeholder="test input"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled 2`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form uncontrolled 3`] = `
<div
  class="StyledMnetUIBase-sc-17lh5y2-0 HlCER"
>
  <form>
    <div
      class="StyledBox-sc-1etxkdl-0 fOhVdt FormField__FormFieldBox-sc-13hlgkg-0 jiSiYB"
    >
      <div
        class="StyledBox-sc-1etxkdl-0 heeXWd FormField__FormFieldContentBox-sc-13hlgkg-1 bIYGru"
      >
        <div
          class="StyledBox-sc-1etxkdl-0 iRTtrq"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-ilbntv-1 caQufR"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-ilbntv-0 gGtFPx"
              name="test"
              placeholder="test input"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-1hmw3c5-0 dQfxlu"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form update 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #E15151;
  border-radius: 3.2px;
  color: #444444;
  padding: 2px 14px;
  font-size: 12px;
  line-height: 16px;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
  -webkit-transition-property: color,background-color,border-color,box-shadow;
  transition-property: color,background-color,border-color,box-shadow;
  -webkit-transition-duration: 0.1s;
  transition-duration: 0.1s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #E15151;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="test"
              placeholder="test input"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="test2"
              placeholder="test-2 input"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form validate 1`] = `
.c0 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<span
  class="c0"
>
  simple string
</span>
`;

exports[`Form validate 2`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<span
  class="c0"
>
   ReactNode 
</span>
`;

exports[`Form validate 3`] = `
.c0 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #e35e59;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<span
  class="c0"
>
  status error
</span>
`;

exports[`Form validate 4`] = `
.c0 {
  margin-left: 4px;
  margin-right: 4px;
  margin-top: 2px;
  margin-bottom: 2px;
  font-size: 12px;
  line-height: 16px;
  color: #666666;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<span
  class="c0"
>
  status info
</span>
`;

exports[`Form with field 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 4px;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border: solid 1px #cdd3e3;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  box-shadow: inset 1px 1px 1px 0 #cdd3e3;
  padding: 7px;
  font-weight: 600;
  margin: 0;
  border: 1px solid #cdd3e3;
  border-radius: 4px;
  width: 100%;
  outline: none;
  border: none;
  box-shadow: none;
}

.c5::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-placeholder {
  color: #e0e4ee;
}

.c5:-ms-input-placeholder {
  color: #e0e4ee;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width:512px) {
  .c1 {
    margin-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    border: solid 1px #cdd3e3;
  }
}

<div
  className="c0"
>
  <form
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="c1 "
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        className="c2 "
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            <input
              autoComplete="off"
              className="c5"
              name="test"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
            />
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;
